--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,4 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
-
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './global';
+@import './form';
+@import './gallery';
+@import './load-more';
